# RL1

./: .gitignore  CMakeLists.txt  compile  compile.sh  readme.md
assets/: triangle.vb
assets/buffers/: cube.vb  sphere.vb
assets/images/: circly.sbs  palette_maker.sbs
assets/images/.autosave/: circly.sbs
assets/models/: sphere.blend
bullet3-2.87/: CMakeLists.txt
doc/: engine.txt  mechanics.txt  todo.txt
glfw-master/: CMakeLists.txt
include/: fnv.h  glad.h  imconfig.h  imgui_impl_opengl3.h  imstb_truetype.h  pcg32.h  task.h
lib/: Bullet3Collision.lib  Bullet3Collision_Debug.lib  Bullet3Common.lib  Bullet3Common_Debug.lib  Bullet3Dynamics.lib  Bullet3Dynamics_Debug.lib  Bullet3Geometry.lib  Bullet3Geometry_Debug.lib  BulletCollision.lib  BulletDynamics.lib  BulletInverseDynamics.lib  BulletInverseDynamicsUtils.lib  BulletInverseDynamicsUtils_Debug.lib  BulletInverseDynamics_Debug.lib  LinearMath.lib  LinearMath_Debug.lib  assimp-vc140-mt.exp  imgui_demo.cpp  imgui_impl_glfw.cpp  sokol_all.c  stb_all.c
lib/x64/Debug/: glfw3.lib
lib/x64/Release/: glfw3.lib
prereqs/: ubuntu_19_04.sh
src/: ai.cpp  ai.h  alloc.h  allocator.cpp  allocator.h  allocs.cpp  allocs.h  array.h  audio.cpp  audio.h  bitfield.h  blockalloc.h  bsp.cpp  bsp.h  bsp2.cpp  bsp2.h  buffer.cpp  buffer.h  camera.cpp  camera.h  channel.cpp  channel.h  circular_stack.h  compalloc.h  compiler.cpp  compiler.h  component.cpp  component.h  component_debug.cpp  component_debug.h  component_funcs.h  component_listener.cpp  component_listener.h  component_types.h  component_types_thin.h  comptype.h  control.cpp  control.h  csg.cpp  csg.h  (+115 more)
src/shaders/: flat.cpp  flat.h  ibl.cpp  ibl.h  sky.cpp  sky.h  textured.cpp  textured.h
vs2017/: .gitignore  rl1.sln  rl1.vcxproj  rl1.vcxproj.filters
